# concu_p1

./: Administrator.cpp  Administrator.h  CMakeCache.txt  CMakeLists.txt  Makefile  PortalInterface.cpp  PortalInterface.h  PortalMenu.cpp  PortalMenu.h  README.md  ReadResult.cpp  ReadResult.h  cmake_install.cmake  main.cpp
client/: Client.cpp  Client.h  FinancialQuotationClient.cpp  FinancialQuotationClient.h  PortalClient.cpp  PortalClient.h  WeatherClient.cpp  WeatherClient.h
dto/: FinancialQuotationDTO.cpp  FinancialQuotationDTO.h  ResponseDTO.cpp  ResponseDTO.h  WeatherDTO.cpp  WeatherDTO.h
ipc/: Fifo.cpp  Fifo.h  FifoEscritura.cpp  FifoLectura.cpp  FifoLectura.h
request/: HTTPMethod.cpp  HTTPMethod.h  Request.cpp  Request.h  RequestBuilder.cpp  RequestBuilder.h  RequestSerializer.h  Resource.cpp  Resource.h
serializer/: FinancialQuotationSerializer.cpp  FinancialQuotationSerializer.h  RequestSerializer.cpp  RequestSerializer.h  WeatherSerializer.cpp  WeatherSerializer.h
service/: FinancialQuotationService.cpp  FinancialQuotationService.h  PortalService.cpp  PortalService.h  Service.cpp  Service.h  WeatherService.cpp  WeatherService.h
signal/: SIGINT_Handler.h  SignalHandler.cpp
utils/: Constants.cpp  Constants.h
